車宿遊北海道.html

--- a/車宿遊北海道.html
+++ b/車宿遊北海道.html
@@ -287,7 +287,7 @@
     <div class="slider">
         <img src="chitose1.jpg" class="active" alt="千歲1">
         <img src="chitose2.jpg" alt="千歲2">
-        <img src="chitose3.jpg" alt="千歲3">
+        <img src="chitose3.Jpg" alt="千歲3">
         <span class="arrow left" onclick="prevSlide('chitose')">&#10094;</span>
         <span class="arrow right" onclick="nextSlide('chitose')">&#10095;</span>
     </div>
@@ -312,7 +312,7 @@
     <div class="slider">
         <img src="furano1.jpg" class="active" alt="富良野1">
         <img src="furano2.jpg" alt="富良野2">
-        <img src="furano3.jpg" alt="富良野3">
+        <img src="furano3.Jpg" alt="富良野3">
         <span class="arrow left" onclick="prevSlide('furano')">&#10094;</span>
         <span class="arrow right" onclick="nextSlide('furano')">&#10095;</span>
     </div>
